<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.PrimeNumberActivity"
    tools:showIn="@layout/activity_prime_number">

    <EditText
        android:id="@+id/primeNumET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="number"
        android:text="@string/five"
        android:hint="@string/whichNumber"
        />

    <Button
        android:id="@+id/primeNumBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/primeNumET"
        android:onClick="primeNumClick"
        android:text="@string/startBtn"
        />

    <ProgressBar
        android:id="@+id/primeNumPB"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/primeNumBtn"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />

</RelativeLayout>