<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.LevelActivity"
    tools:showIn="@layout/activity_level">

    <TextView
    android:id="@+id/lightLevelTV"
    android:text="@string/lightlevel"
    android:textSize="25dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    />

    <TextView
        android:id="@+id/lightTV"
        android:text="@string/about"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/lightLevelTV"
        android:layout_alignEnd="@+id/lightLevelTV"
        android:layout_below="@+id/lightLevelTV"
        />

    <TextView
        android:id="@+id/spiritLevelTV"
        android:text="@string/spiritlevel"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/lightTV"
        android:layout_alignEnd="@+id/lightTV"
        android:layout_below="@+id/lightTV"
        />

    <TextView
        android:id="@+id/levelTV"
        android:text="@string/about"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/spiritLevelTV"
        android:layout_alignEnd="@+id/spiritLevelTV"
        android:layout_below="@+id/spiritLevelTV"
        />

</RelativeLayout>